[package]
name = "rchat"
version = "0.1.0"
authors = ["Yannic Rieger <riegeryannic@gmail.com>"]
edition = "2018"

[dependencies]
bytebuffer = "0.2.1"
byteorder = "1.3.1"
rust-crypto = "^0.2"
reqwest = "0.9.17"
serde_json = "1.0"
openssl = "0.10"
rand = "0.6"
hex = "0.3.2"
cfb8 = "0.3.2"
aes = "0.3.2"